--- a/ecomproduct.twig
+++ b/ecomproduct.twig
@@ -10,6 +10,7 @@
         <div class="container">
 			{{widget('ecombasket', 'shopbasket', {})|raw}}
             {{zone('main')|raw}}
+			{{widget('space', 'pagespace', {'height': '20'})|raw}}
         </div>
     </div>
 </section>
