--- a/home.twig
+++ b/home.twig
@@ -45,6 +45,7 @@
     <div id="main-scroll" class="template__content">
 		{{widget('pagetitle', 'title', {})|raw}}
 		{{zone('main')|raw}}
+		{{widget('space', 'pagespace', {'height': '20'})|raw}}
     </div>
 </section>
 
