--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -327,6 +327,10 @@
 .ecombasketsummary{
 	.continue-shopping {
 		.button;
-		line-height: 46px;
+		
+		+ .ecombasketsummary__button {
+			margin-top: 0;
+			margin-left: 0.5em;
+		}
 	}
 }
