--- a/less/plugins/ecommerce/ecommerce-categories.less
+++ b/less/plugins/ecommerce/ecommerce-categories.less
@@ -33,6 +33,7 @@
 	.paragraph;
 	margin: 0 0.5% 1%;
 	padding: 0;
+	color: inherit;
     list-style: none;
 	
 	.make-font-a-little-smaller(@font__p--font-size);
