--- a/less/widgets/image.less
+++ b/less/widgets/image.less
@@ -8,6 +8,7 @@
 
 .widget[data-name="image"] {
 	.paragraph;
+	color: inherit;
 	
 	.imagewidget__figure {
 		margin: 0;
@@ -32,6 +33,7 @@
 	.image-description {
 		.paragraph;
 		padding-bottom: 0;
+		color: inherit;
 	}
 
 	.image-title {
