--- a/less/widgets/profile.less
+++ b/less/widgets/profile.less
@@ -8,9 +8,10 @@
 
 .profile {
      h1, h2, h3, p, a {
-	 	.paragraph;
-        position: relative;
-        padding: 0;
+		.paragraph;
+		position: relative;
+		padding: 0;
+		color: inherit;
     }
 }
 
@@ -59,9 +60,6 @@
 		letter-spacing: -0.025em;
 		text-transform: none;
 		font-family: @font__h3--font-family;
-	}
-	
-	.tweet-metadata {
 	}
 }
 
