--- a/default.twig
+++ b/default.twig
@@ -9,6 +9,7 @@
     <div class="template__content">
 		{{widget('pagetitle', 'title', {})|raw}}
 		{{zone('main')|raw}}
+		{{widget('space', 'pagespace', {'height': '20'})|raw}}
     </div>
 </section>
 
