--- a/less/main/animations.less
+++ b/less/main/animations.less
@@ -94,7 +94,7 @@
 @-webkit-keyframes fadeInUp {
     0% {
         opacity: 0;
-		.transform-translate(0, 20%;);
+		.transform-translate(0, 40px;);
     }
     100% {
         opacity: 1;
@@ -104,7 +104,7 @@
 @-moz-keyframes fadeInUp {
     0% {
         opacity: 0;
-		.transform-translate(0, 20%;);
+		.transform-translate(0, 40px;);
     }
     100% {
         opacity: 1;
@@ -114,7 +114,7 @@
 @-ms-keyframes fadeInUp {
     0% {
         opacity: 0;
-		.transform-translate(0, 20%;);
+		.transform-translate(0, 40px;);
     }
     100% {
         opacity: 1;
@@ -124,7 +124,7 @@
 @-o-keyframes fadeInUp {
     0% {
         opacity: 0;
-		.transform-translate(0, 20%;);
+		.transform-translate(0, 40px;);
     }
     100% {
         opacity: 1;
@@ -134,7 +134,7 @@
 @keyframes fadeInUp {
     0% {
         opacity: 0;
-		.transform-translate(0, 20%;);
+		.transform-translate(0, 40px;);
     }
     100% {
         opacity: 1;
