--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -77,9 +77,10 @@
         display: block;
         width: 2.5em;
         position: absolute;
-		top: 0.9em;
+		top: 50%;
         left: 0;
         bottom: 0;
+		margin-top: -0.7em;
         text-align: center;
 		font-size: 1.4em;
 		line-height: 1.4em;
@@ -231,5 +232,25 @@
 			border-color: @color__button--background--hover;
 			color: @color__button--text--hover;
 		}
+	}
+}
+
+// ------------------------------
+// #Basekit Messages
+// ------------------------------
+
+.bk-message {
+	.border-radius(0);
+    padding: 0.75em 1em 0.75em 46px !important;
+	background-color: lighten(@color__container--background, 10%) !important;
+    border: 1px solid darken(@color__container--background, 10%);
+	
+	&, h3, p {
+		.paragraph;
+		color: inherit;
+	}
+	
+	h3, p {
+		padding: 0;
 	}
 }
