--- a/less/main/mixins.less
+++ b/less/main/mixins.less
@@ -37,6 +37,11 @@
     background: linear-gradient(@origin, @startColor, @endColor);
 }
 
+.blur(@blur) {
+  filter: blur(@blur);
+  -webkit-filter: blur(@blur);
+}
+
 .box-shadow(@shadow) {
 	-webkit-box-shadow: @shadow;
 	-moz-box-shadow: @shadow;
@@ -244,19 +249,6 @@
 	margin: -@item--margin-size;
 }
 
-.item--margin-size--2cols(@item--margin-size: 1%) {
-	width: 100%/2-@item--margin-size*2;
-	margin: @item--margin-size;
-	
-    @media @mobile {
-		margin: @item--margin-size;
-    }
-	
-	&:last-child {
-		margin-bottom: @item--margin-size;
-	}
-}
-
 .item--margin-size--2to1-cols(@item--margin-size: 1%) {
 	width: 100%/2-@item--margin-size*2;
 	margin: @item--margin-size;
@@ -271,20 +263,50 @@
 	}
 }
 
-.item--margin-size--3to1-cols(@item--margin-size: 1%) {
-    width: 100%/3-@item--margin-size*2;
-	margin: @item--margin-size;
-	
-    @media @tablet-horizontal {
-		width: 100%/2-@item--margin-size*2;
-    }
-	
-    @media @mobile {
-		width: 100%;
-    }
-	
-	&:last-child {
-		margin-bottom: @item--margin-size;
+// Widget Mixins
+
+.widget-styles {
+	width: 90%;
+	max-width: @layout-max-width;
+	margin: 0 auto;
+	padding: 1em;
+	background: @color__container--background;
+
+	@media @desktop-narrow {
+		width: auto;
+		padding: 1em 1.5em;
+	}
+
+	@media @tablet-horizontal {
+		width: auto;
+		padding: 1em 2.5em;
+	}
+
+	@media @mobile {
+		padding: 1em 2em;
+	}
+		
+	> * {
+		margin: 0 auto;
+		max-width: 940px;
+	}
+}
+
+.widget-content-styles {
+	padding: 1px 1em;
+
+	@media @desktop-narrow {
+		padding: 1em 1.5em;
+	}
+
+	@media @tablet-horizontal {
+		width: auto;
+		margin: 0;
+		padding: 1em 2.5em;
+	}
+
+	@media @mobile {
+		padding: 1px 2em;
 	}
 }
 
