--- a/less/main/table.less
+++ b/less/main/table.less
@@ -13,11 +13,18 @@ table {
 	border-collapse: separate;
 	border-spacing: 0;
 	margin: 0 0 1em;
+	color: inherit;
 		
 	@media @mobile {
 		display: block;
-		border-top: 1px solid @color__p--text;
-		border-bottom: 1px solid @color__p--text;
+		border-top: 1px solid;
+		border-bottom: 1px solid;
+	}
+	
+	.responsivecolumns & {
+		display: block;
+		border-top: 1px solid;
+		border-bottom: 1px solid;
 	}
 }
 
@@ -28,43 +35,44 @@ tr {
 	@media @mobile {
 		display: block;
 	}
+	
+	.responsivecolumns & {
+		display: block;
+	}
 }
 
 // Table Cell
 
 td, th {
+	.paragraph;
 	border: none;
 	background-color: transparent;
-	font-family: @font__p--font-family;
-	font-weight: @font__p--font-weight;
-	font-size: @font__p--font-size;
-	line-height: @font__p--line-height;
-	letter-spacing: @font__p--letter-spacing;
-	color: @color__p--text;
-	
-	.make-font-a-little-smaller(@font__p--font-size);
-	.make-font-smaller(@font__p--font-size);
-	.make-font-a-lot-smaller(@font__p--font-size);
-	
-	.make-line-height-a-little-smaller(@font__p--line-height);
-	.make-line-height-smaller(@font__p--line-height);
-	.make-line-height-a-lot-smaller(@font__p--line-height);
+	padding-bottom: 0;
+	color: inherit;
 	
 	tr:first-child & {
-		border-top: 1px solid @color__p--text;
+		border-top: 1px solid;
 	}
 		
 	@media @mobile {
+		display: block;
+	}
+	
+	.responsivecolumns & {
 		display: block;
 	}
 }
 
 th {
 	padding: 0.5em;
-	border-bottom: 1px solid @color__p--text;
+	border-bottom: 1px solid;
 	font-weight: 700;
 		
 	@media @mobile {
+		display: none;
+	}
+	
+	.responsivecolumns & {
 		display: none;
 	}
 }
@@ -75,6 +83,26 @@ td {
 	line-height: 1.5em;
 		
 	@media @mobile {
+		display: block;
+		border-bottom: 1px solid transparent;
+		padding: 0;
+		
+		&:first-child {
+			padding-top: 1em;
+		}
+		
+		&:last-child {
+			border-bottom: 1px solid @color-text--light;
+			padding-bottom: 1em;
+		}
+		
+		tr:last-child &:last-child {
+			border-bottom: 1px solid transparent;
+			padding-bottom: 0;
+		}
+	}
+	
+	.responsivecolumns & {
 		display: block;
 		border-bottom: 1px solid transparent;
 		padding: 0;
