--- a/less/main/variables.less
+++ b/less/main/variables.less
@@ -9,6 +9,7 @@
 // Break point for smaller devices.
 @desktop-wide: ~"only screen and (max-width: 2000px)";
 @desktop: ~"only screen and (max-width: 1650px)";
+@desktop-narrow: ~"only screen and (max-width: 1200px)";
 @tablet-horizontal: ~"only screen and (max-width: 1024px)";
 @tablet: ~"only screen and (max-width: 768px)";
 @mobile: ~"only screen and (max-width: 650px)";
