--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -6,57 +6,62 @@
 // #Article
 // ------------------------------
 
-.widget[data-name="blogpost"] {
-	padding: 0;
+.template__content >,
+.template__content section > {
+	.widget[data-name="blogpost"] {
+		padding: 0;
+		background: transparent;
 
-	.blogpost {
-		width: auto;
-		max-width: none;
+		.blogpost {
+			width: auto;
+			max-width: none;
+		}
 	}
 }
 
 .blogpost__post-article {
 	position: relative;
+	margin-bottom: 0;
+	
+	&:last-child {
+		margin-bottom: 0;
+	}
 }
 
 // ------------------------------
 // #Image
 // ------------------------------
-
 .blogpost {
-	.post-image {
+	.blogpost__post-image {
 		.paragraph;
 		position: relative;
-		background-color: @color__body--background;
-		margin: 4em auto -3px;
+		background-color: transparent;
+		margin: 0 auto;
 		padding: 0;
+		color: inherit;
+		.animation(fadeInUp 1s cubic-bezier(.70,0,0,1) 0s forwards);
 
 		.responsivecolumns & {
 			border: none;
 		}
-		
+
 		&:after {
 			content: "";
-			z-index: 2;
 			position: absolute;
-			top: -10px;
+			top: 0;
 			left: 0;
 			right: 0;
-			display: block;
-			margin: -2em auto 0;
-			width: 90%;
-			max-width: @layout-max-width;
-			height: 2em;
+			bottom: 0;
+			background-color: @color__blogpost-article--background;
 
 			@media @mobile {
 				top: -6px;
 			}
 		}
 	}
-	
-	.image-link {
+
+	.blogpost__image-link {
 		display: block;
-		opacity: 0.6;
 		padding-bottom: 900px;
 		background-position: center;
 		background-size: cover;
@@ -66,13 +71,18 @@
 			padding-bottom: 60%;
 		}
 
-		@media @tablet {
-			height: 80vw;
-			padding-bottom: 80%;
+		@media @tablet-horizontal {
+			height: 100vw;
+			padding-bottom: 100%;
 		}
-		
+
+		@media @mobile {
+			height: 150vw;
+			padding-bottom: 150%;
+		}
+
 		// Using the background image instead.
-		
+
 		.image {
 			display: none;
 		}
@@ -85,66 +95,132 @@
 
 .blogpost__post-content,
 .blogpost__post-footer {
-	width: 90%;
-	max-width: 940px;
-	margin: 0 auto;
-	padding: 1em 0;
-
-	> * {
-		padding: 0 5%;
-	}
+	.widget-styles;
 }
 
 .blogpost__post-content {
+	position: relative;
 	padding-bottom: 0;
-	background-color: @color__blogpost-article--background;
+	background-color: @color__blogpost--background;
+	padding-bottom: 5em !important;
+	
+	&:after {
+		content: "";
+		position: absolute;
+		left: 50%;
+		bottom: -2em;
+		margin-left: -1px;
+		height: 6em;
+		width: 1px;
+		background-color: fade(@color__blogpost-title--text, 75%);
+	}
+	
+	ul {
+		li {
+			&:before {
+				position: absolute;
+				margin-left: -2em;
+				content: "\2014";
+			}
+		}
+	}
 }
 
 .blogpost__post-footer {
 	position: static;
 	z-index: 5;
-	margin-bottom: -4em;
+	padding-top: 2em;
 	text-align: center;
-	padding-top: 0;
-	
-	&:before,
-	&:after {
-		content: "";
-		z-index: -1;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-	}
-	
-	&:before {
-		background: @color__body--background;
-	}
 }
 
 .blogpost__post-header {
-	padding-top: 2em;
 	padding-bottom: 1em;
+
+	@media @mobile {
+		padding-bottom: 1.5em;
+	}
 }
 
 .blogpost__post-title {
 	.heading--1;
 	position: relative;
+	text-align: center;
 	color: @color__blogpost-title--text;
-	
+	margin-top: 20px;
+	margin-bottom: 75px;
+	padding-right: 2em;
+	padding-left: 2em;
+	hyphens: none;
+
+	@media @desktop {
+		margin-top: 10px;
+	}
+
+	@media @tablet-horizontal {
+		padding-right: 1em;
+		padding-left: 1em;
+	}
+
+	@media @mobile {
+		margin-bottom: 75px;
+		padding-right: 0;
+		padding-left: 0;
+	}
+		
 	&:before {
 		content: "";
 		position: absolute;
-		top: -320px;
+		top: 100%;
+		bottom: -75px;
 		left: 50%;
-		bottom: 100%;
 		margin-left: -1px;
 		width: 1px;
 		background-color: fade(@color__blogpost-title--text, 75%);
+	}
+	
+	.blogpost__post-image ~ .blogpost__post-content & {
+		margin-top: -380px;
+		margin-bottom: 260px;
 
 		@media @desktop {
-			top: -20vw;
+			margin-top: -35vw;
+			margin-bottom: 28vw;
+		}
+
+		@media @tablet-horizontal {
+			margin-top: -68vw;
+			margin-bottom: 58vw;
+		}
+
+		@media @tablet {
+				margin-top: -65vw;
+				margin-bottom: 55vw;
+		}
+
+		@media @mobile {
+			margin-top: -96vw;
+			margin-bottom: 82vw;
+		}
+
+		&:before {
+			bottom: 100%;
+			bottom: -260px;
+
+			@media @desktop {
+				bottom: -28vw;
+			}
+
+			@media @tablet-horizontal {
+				bottom: -58vw;
+			}
+
+			@media @tablet {
+				bottom: -55vw;
+			}
+
+			@media @mobile {
+				bottom: -82vw;
+			}
 		}
 	}
 }
@@ -156,17 +232,30 @@
 .blogpost__post-footer {
 	.timestamp {
 		position: absolute;
-		top: 580px;
+		top: 0;
 		left: 0;
 		right: 0;
+		max-width: none;
 		color: @color__blogpost-title--text;
+		
+		.blogpost__post-image ~ & {
+			top: 500px;
 
-		@media @desktop {
-			top: 40vw;
-		}
+			@media @desktop {
+				top: 24vw;
+			}
 
-		@media @tablet {
-			top: 60vw;
+			@media @tablet-horizontal {
+				top: 31vw;
+			}
+
+			@media @tablet {
+				top: 34vw;
+			}
+
+			@media @mobile {
+				top: 53vw;
+			}
 		}
 	}
 }
@@ -177,7 +266,6 @@
 
 .blogpost__post-attributes {
 	position: relative;
-	margin: 2em 0;
 	.clearfix();
 	
 	@media @mobile {
@@ -189,39 +277,11 @@
 .post-tags {
 	display: block;
 	text-align: center;
-}
-
-
-.post-category {
-	margin-top: 3.5em;
-	padding-top: 1em;
-	
-	&:before {
-		content: "";
-		position: absolute;
-		top: -3em;
-		left: 50%;
-		bottom: 100%;
-		margin-left: -1px;
-		width: 1px;
-		background-color: fade(@color__blogpost-title--text, 75%);
-	}
+	margin-top: 0.5em;
 }
 
 .post-tags {
-	margin-bottom: 5em;
 	padding-bottom: 1em;
-	
-	&:after {
-		content: "";
-		position: absolute;
-		top: 100%;
-		left: 50%;
-		bottom: -3em;
-		margin-left: -1px;
-		width: 1px;
-		background-color: fade(@color__blogpost-title--text, 75%);
-	}
 }
 
 .category-title,
@@ -229,8 +289,8 @@
 	display: block;
 	position: relative;
 	vertical-align: middle;
-	margin: 1em 0 0;
-	padding: 0.5em 0;
+    margin: 0;
+    padding: 1em 0 0.5em;
 	font-weight: bold;
 	line-height: 1em;
 }
