--- a/less/plugins/ecommerce/ecommerce-basket.less
+++ b/less/plugins/ecommerce/ecommerce-basket.less
@@ -25,8 +25,9 @@
 		padding: 0;
 		border: none;
 		background: none;
-		font-size: 0;
 		height: auto;
+		text-align: right;
+		font-size: 0;
 		
 		&:before {
 			content: none;
@@ -137,6 +138,7 @@
 			width: 100%;
 			padding-right: 3em;
 			padding-bottom: 0;
+			color: inherit;
 			text-align: left;
 		}
 		
