--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -12,6 +12,42 @@
 	h1, h2, h3, h4, h5, h6, p, span {
 		color: @color__ecomproductslist-label--text;
 	}
+	
+	.pagetitle {
+		width: 90%;
+		max-width: @layout-max-width;
+		margin: 0 auto;
+		padding: 0 1em;
+
+		@media @desktop-narrow {
+			width: auto;
+			padding: 1em 1.5em;
+		}
+
+		@media @tablet-horizontal {
+			width: auto;
+			padding: 1em 2.5em;
+		}
+
+		@media @mobile {
+			padding: 1em 2em;
+		}
+		
+		h1.pagetitle-text {
+			margin: 0 auto;
+			padding: 0;
+			max-width: 940px;
+			color: @color__h1--text;
+
+			@media @tablet-horizontal {
+				display: block;
+			}
+
+			.responsivecolumns & {
+				display: block;
+			}
+		}
+	}
 }
 
 .template__content >,
@@ -49,8 +85,22 @@
 .ecomproductslist__product-filters {
 	width: 90%;
 	max-width: @layout-max-width;
-	margin: 0 auto 2em;
-	padding: 1px 5%;
+	margin: 0 auto;
+	padding: 0 1em;
+
+	@media @desktop-narrow {
+		width: auto;
+		padding: 1em 1.5em;
+	}
+
+	@media @tablet-horizontal {
+		width: auto;
+		padding: 1em 2.5em;
+	}
+
+	@media @mobile {
+		padding: 1em 2em;
+	}
 	
 	.legend {
 		display: none;
@@ -69,6 +119,7 @@
 	form {
 		margin-left: auto;
 		margin-right: auto;
+		margin-bottom: 2em;
 		max-width: 940px;
 
 		@media @tablet-horizontal {
@@ -331,12 +382,13 @@
     width: 90%;
     max-width: @layout-max-width;
     margin: 0 auto;
-    padding: 1px 5%;
+    padding: 1px 0;
 	
 	> * {
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 940px;
+		max-width: 980px;
+		padding: 20px;
 	}
 }
 
@@ -411,7 +463,6 @@
 	border: none;
 	padding: 1em;
 	margin: -1px 0;
-	background-color: @color__ecomproductslist-product-item--background;
 	height: 100%;
 	
 	.responsivecolumns & {
@@ -420,7 +471,7 @@
 }
 
 .product-item-image  {
-    background-color: @color__ecomproduct-images--background;
+	background-color: @color__ecomproductslist-product-item--background;
     width: auto;
 	font-size: 0;
 	
@@ -446,7 +497,8 @@
 }
 
 .product-item-details {
-	margin-top: 1em;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
     text-align: left;
 
     @media @mobile {
@@ -457,10 +509,12 @@
 
 .product-item-title {
 	margin: 0;
-	padding: 0;
+	padding: 0.25em 0;
+	line-height: 1em;
 
     .title-link {
 		.heading--4;
+		line-height: 1em;
 		font-family: @font__h3--font-family;
         color: @color__ecomproductslist-product-title--text;
 		hyphens: none;
@@ -474,6 +528,7 @@
 .product-item-price {
 	.paragraph;
 	padding: 0;
+	color: inherit;
 	color: @color__ecomproductslist-product-title--text;
 }
 
@@ -486,13 +541,14 @@
 		width: 90%;
 		max-width: @layout-max-width;
 		margin: 0 auto;
-		padding: 1px 5%;
+		padding: 1px 0;
 	}
 	
 	.listing-title {
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 940px;
+		max-width: 980px;
+		padding: 20px;
 		
 		// Column styles
 
