--- a/less/widgets/embeds.less
+++ b/less/widgets/embeds.less
@@ -7,7 +7,7 @@
 // -----------------------------
 
 .widget[data-name="map"] .map {
-	background-color: @color__body--background;
+	background-color: transparent;
 	width: auto;
 	max-width: none;
     line-height: 0;
@@ -31,7 +31,7 @@
 // -----------------------------
 
 .widget[data-name="youtube"] .youtube {
-	background-color: @color__body--background;
+	background-color: transparent;
 	width: auto;
 	max-width: none;
 		
